log
Mon Mar 22 18:05:59 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:33: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
     List *lista = malloc(sizeof(list));
                                 ^~~~
                                 lista
list.c:32:33: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
Mon Mar 22 18:06:28 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
0f06b5b
Mon Mar 22 18:06:40 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4541390
Tue Mar 23 22:23:09 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5f4c73a
Tue Mar 23 22:25:07 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
7974f9b
Tue Mar 23 22:44:43 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cf8cc44
